# octoffers

./: .gitignore  .gitmodules  CONTRIBUTING.md  Containerfile  Dockerfile  Gemfile  LICENSE  README.md  Rakefile  architecture.d2  compose.yml  docker-compose.yml  octoffers.Containerfile  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature-request--new-driver-development.md
.github/workflows/: djinni.yml  setup.yml
db/: schema.rb
octoffers/: __init__.py  __main__.py  main.py
octoffers/db/schemes/: djinni.py  indeed.py
octoffers/intergrations/: chat_gpt.py
test/: main.rb
tests/: test_indeed.py
